--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+		<meta name="yandex-verification" content="68cfbb4920a09959" />
+		<meta name="google-site-verification" content="yJnsr-z85sLIqxz8Z9Tp0EyPKA8-jNqlRr0-DBdQpoA" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
