--- a/biografija.html
+++ b/biografija.html
@@ -1,14 +1,9 @@
 <!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
+<html lang="ru">
 	<head>
 		<title>Биография Хуана Понсе де Леона</title>
-		<meta name="description" content="">
-		<meta name="keywords" content="">
+		<meta name="description" content="Биография Хуана Понсе де Леона - испанского конкистадора с титулом аделантадо">
+		<meta name="keywords" content="понсе де леон, хуан понсе де леон, понсе де леон биография">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
