--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 <!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
+<html lang="ru">
 	<head>
 		<title>Хуан Понсе де Леон</title>
-		<meta name="description" content="">
-		<meta name="keywords" content="">
+		<meta name="description" content="Страница посвящена испанскому конкистадору Хуану Понсе де Леону с титулом аделантадо">
+		<meta name="keywords" content="понсе де леон, хуан понсе де леон">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
@@ -172,7 +167,7 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-			<!-- Yandex.Metrika counter -->
+<!-- Yandex.Metrika counter -->
 			<script type="text/javascript">
 				(function (d, w, c) {
 					(w[c] = w[c] || []).push(function() {
@@ -201,7 +196,7 @@
 					} else { f(); }
 				})(document, window, "yandex_metrika_callbacks");
 			</script>
-			<!-- /Yandex.Metrika counter -->
+<!-- /Yandex.Metrika counter -->
 			<script>
 				(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 					(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
