--- a/poiski-istochnika-molodosti.html
+++ b/poiski-istochnika-molodosti.html
@@ -1,14 +1,9 @@
 <!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
+<html lang="ru">
 	<head>
 		<title>В поисках «Источника Молодости»</title>
-		<meta name="description" content="">
-		<meta name="keywords" content="">
+		<meta name="description" content="Поиски источника молодости в 16 веке Хуаном Понсе де Леоном">
+		<meta name="keywords" content="понсе де леон, хуан понсе де леон, источник молодости">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
